[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cartesian-axis-3d"
version = "0.0.1"
authors = [
  { name="Ryuto Yoshida"},
]
description = "Utilities for 3D Cartesian coordinate systems: axis definitions, orientations, handedness, and software-specific conventions."
readme = "src/cartesian_axis/README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
]

[project.urls]
"Homepage" = "https://github.com/ry-yoshida-private/CartesianAxis3D"
"Bug Tracker" = "https://github.com/ry-yoshida-private/CartesianAxis3D/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cartesian_axis = ["py.typed"]
